<resources>
    <string name="app_name">ProjetLivre</string>
    <string name="infos">Infos</string>
    <string name="supprimer">Supprimer</string>
    <string name="scan">Scan</string>
    <string name="recognition_text">Reconnaissance de texte</string>
    <string name="code_barre">Code barre</string>
    <string name="manuel">Manuel</string>
    <string name="informations_du_livre">Informations du livre</string>
    <string name="rechercher">Rechercher</string>
    <string name="code_barre_multi">Code barre multi</string>
    <string name="reconnaissance_de_texte_multi">Reconnaissance de texte multi</string>
    <string name="titre">Titre</string>
    <string name="matiere">Matiere</string>
    <string name="comm">Commentaires</string>
    <string name="isbn">ISBN</string>
    <string name="cd_in">Merci d\'entrer un code barre</string>

    <string name="add_book_ok">Ajout du nouveau livre</string>
    <string name="add_book_fail">Ajout du nouveau livre impossible</string>

    <string name="info_book_ok"></string>
    <string name="info_book_fail">Attention : vous avez enlevé le code barre.\n Modification non enregistrée.</string>

    <string name="retour">Retour</string>
    <string name="save">Enregistrer</string>
    <string name="validation">Validation</string>
    <string name="utilisateur">Utilisateur</string>

    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
</resources>
